--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "chevere/reponame",
-    "description": "A chevere reponame package",
+    "name": "chevere/regex",
+    "description": "A chevere regex package",
     "homepage": "https://chevere.org",
     "type": "library",
     "license": "Apache-2.0",
@@ -12,7 +12,9 @@
         }
     ],
     "require": {
-        "chevere/chevere": "^3.0"
+        "php": "^8.1",
+        "chevere/message": "^0.1.0",
+        "thecodingmachine/safe": "^2.5"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.9",
@@ -20,11 +22,8 @@
         "symplify/easy-coding-standard": "^11.1"
     },
     "autoload": {
-        "files": [
-            "src/functions.php"
-        ],
         "psr-4": {
-            "Chevere\\%namespace%\\": "src/"
+            "Chevere\\Regex\\": "src/"
         }
     },
     "autoload-dev": {
