--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "chevere/message": "^0.1.0",
-        "thecodingmachine/safe": "^2.5"
+        "chevere/message": "^1.0.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.9",
